Address review: header MAC, AES-GCM, safer extract I/O
- Authenticate length header with truncated HMAC-SHA256 (not a lone STX)
- Seed pixel PRNG from SHA-256(passphrase) instead of String.hashCode
- Switch optional cipher to AES-128-GCM; clear PBKDF2 password material
- Restart PRNG before embed; write extract -o as raw bytes
- Soften README security claims

Co-authored-by: Kevin Zheng <jxzheng@uwaterloo.ca>